# phenolphthalein

./: Cargo.toml  README.md  build.rs  env.c  env.h  phenol.h  test.c  test.h
src/: api.rs  c.rs  config.rs  env.rs  err.rs  fsa.rs  lib.rs  main.rs  manifest.rs  model.rs  obs.rs  run.rs  test.rs  testapi.rs  ux.rs
src/api/: abs.rs  rust.rs
src/api/abs/: check.rs  test_helpers.rs
src/api/c/: entry.rs  env.h  env.rs  manifest.rs  phenol.h
src/api/rust/: entry.rs  env.rs
src/c/: entry.rs  env.c  env.rs  manifest.rs
src/config/: check.rs  clap.rs  err.rs  io.rs  iter.rs  permute.rs  sync.rs  top.rs
src/fsa/: sync.rs
src/model/: check.rs  manifest.rs  obs.rs  outcome.rs  report.rs  slot.rs  state.rs
src/run/: fsa.rs  halt.rs  instance.rs  obs.rs  permute.rs  runner.rs  shared.rs  sync.rs  thread.rs
src/testapi/: abs.rs  c.rs
src/testapi/c/: entry.rs  env.c  env.h  env.rs  manifest.rs  phenol.h
src/ux/: args.rs  clap.rs  err.rs  obs.rs  out.rs  report.rs
