[package]
name = "phenolphthalein"
version = "0.1.0"
authors = ["Matt Windsor <nihilistmatt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
colored = "2.0.0"
clap = "2.33"
crossbeam = "0.8.0"
ctrlc = { version = "3.1", features = ["termination"] }
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
libc = "0.2"
rand = "0.8"
tabwriter = { version = "1.2.1", features = ["ansi_formatting"] }
thiserror = "1.0"

[build-dependencies]
cc = "1.0"

[profile.release]
debug = true
